2004-05-31 Scott Dattalo <scott@dattalo.com>
	* almost all files: Since the Register class and the Instruction class
	are now derived from gpsimValue, all objects that use registers
	and instructions have to change. These changes have been propogated
	through gpsim. Next, the gui will start taking advantage of the
	abstractness that this change introduces.
	* src/16bit-instructions.cc, src/14bit-instructions.h: Manuel Boyer
	reported two bugs with the 16bit subwf instruction. He fixed one
	(N-bit was ignored) with a patch and I fixed the other (OV bit was 
	ignored).

2004-05-27 Scott Dattalo <scott@dattalo.com>
	* src/value.h, src/value.cc: New files that support abstract values.
	* src/register.h, src/pic-instructions.h:
	Now all base objects that have values are derived from the new
	gpsimValue object.

2004-05-27 Scott Dattalo <scott@dattalo.com>
	* src/breakpoints.h, src/breakpoints.cc: Execution breakpoints now
	support a customizable message that will be displayed when the
	break is encountered.

2004-05-21 Scott Dattalo <scott@dattalo.com>
	* src/processor.cc, src/register.h, register.cc, gui/gui_register.h,
	gui/gui_regwin.c: Gui Register Window now can show unitialized register
	data.

2004-05-21 Scott Dattalo <scott@dattalo.com>
	* src/register.h: Added new accessor member functions to the Register
	class to manipulate the new way register values are represented.
	
2004-05-20 Scott Dattalo <scott@dattalo.com>
	* Tons of files... Changed the Register class' 'unsigned int value'
	field to an object. The get() and put() accessor functions now provide
	read and write access.

2004-05-20 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src_asm.cc: Syntax highlighting now is only applied to lines
	that are associated with generated code.
	
2004-05-16 Scott Dattalo <scott@dattalo.com>
	* src/processor.h, src/processor.cc:
	Added mapping between program memory and source file line numbers
	
2004-05-16 Scott Dattalo <scott@dattalo.com>